objects/junctionObj__c.object
<CustomObject>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Establishment__c</fullName>
        <label>Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Natonality__c</fullName>
        <label>Natonality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parent1</label>
        <referenceTo>parent1__c</referenceTo>
        <relationshipLabel>junctionObjs</relationshipLabel>
        <relationshipName>junctionObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>parent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parent2</label>
        <referenceTo>parent2__c</referenceTo>
        <relationshipLabel>junctionObjs</relationshipLabel>
        <relationshipName>junctionObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>parent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parent3</label>
        <referenceTo>parent3__c</referenceTo>
        <relationshipLabel>junctionObjs</relationshipLabel>
        <relationshipName>junctionObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phonenumber__c</fullName>
        <label>phonenumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>servicetype__c</fullName>
        <label>servicetype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>global</fullName>
                </value>
                <value>
                    <fullName>local</fullName>
                </value>
                <value>
                    <fullName>nation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>junctionObj</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmailId__c</columns>
        <columns>companyName__c</columns>
        <columns>isProduct__c</columns>
        <columns>parent1__c</columns>
        <columns>parent2__c</columns>
        <columns>parent4__c</columns>
        <columns>parent3__c</columns>
        <columns>parent5__c</columns>
        <columns>parent6__c</columns>
        <columns>phonenumber__c</columns>
        <columns>Natonality__c</columns>
        <columns>Profit__c</columns>
        <columns>servicetype__c</columns>
        <columns>Establishment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>junctionObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>junctionObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>